--- a/Android Studio/Tugas14AnisaHasna/app/src/main/res/layout/fragment_list_employee.xml
+++ b/Android Studio/Tugas14AnisaHasna/app/src/main/res/layout/fragment_list_employee.xml
@@ -14,7 +14,8 @@
         android:textAlignment="center"
         android:layout_marginBottom="30dp"
         android:textStyle="bold"
-        android:textSize="22dp"/>
+        android:textSize="22dp"
+        android:layout_marginTop="50dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
